--- a/lab/starter-code/index.html
+++ b/lab/starter-code/index.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 	</head>
 	<body class="is-preload">
 
