--- a/lab/starter-code/index.html
+++ b/lab/starter-code/index.html
@@ -11,10 +11,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="assets/css/main.css" />
-	<link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet">
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 	 crossorigin="anonymous">
+	 <link href="https://fonts.googleapis.com/css?family=Bad+Script" rel="stylesheet"> 
 </head>
 
 <body class="is-preload">
@@ -151,13 +151,13 @@
 				<div class="row">
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="https://cdn.pixabay.com/photo/2016/04/02/21/01/world-1303628_960_720.png" alt="" /></a>
 							<header>
 								<h3>About Me</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSMkSFKAIzFAo0QopTGZmdAN8usyilXH2_6UG14Is8NvRfEnMXIIA" alt="" /></a>
 							<header>
 								<h3>Salmon Cookies</h3>
 							</header>
@@ -165,13 +165,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="./images/bathroom.jpg" alt="" /></a>
 							<header>
 								<h3>Bus Mall</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSe3y7-rMCrfnDV0bjY5zA0v4UYClR-NTw7twDQNjnpo4lV1BUSaQ" alt="" /></a>
 							<header>
 								<h3>Macro Tracker</h3>
 							</header>
@@ -179,13 +179,13 @@
 					</div>
 					<div class="col-4 col-12-mobile">
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="https://cdn.pixabay.com/photo/2017/01/25/08/11/unicorn-2007266_960_720.png" alt="" /></a>
 							<header>
 								<h3>Gallery of Horns</h3>
 							</header>
 						</article>
 						<article class="item">
-							<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+							<a href="#" class="image fit"><img src="https://i.vimeocdn.com/filter/overlay?src0=https%3A%2F%2Fi.vimeocdn.com%2Fvideo%2F482818896_1280x800.jpg&src1=https%3A%2F%2Ff.vimeocdn.com%2Fimages_v6%2Fshare%2Fplay_icon_overlay.png" alt="" /></a>
 							<header>
 								<h3>301-Project</h3>
 							</header>
@@ -204,7 +204,7 @@
 					<h2>About Me</h2>
 				</header>
 
-				<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+				<a href="#" class="image featured"><img src="./images/morocco.jpg" alt="" /></a>
 
 				<p>I am a bilingual educator turned software developer! My greatest strengths are my organization skills and
 					interpersonal communication. My peers have commended me for being able to express complex ideas in a way that's
