--- a/lab/starter-code/index.html
+++ b/lab/starter-code/index.html
@@ -72,7 +72,7 @@
 			</ol>
 			<div class="carousel-inner">
 				<div class="item active">
-					<img class="d-block w-100" width=100% height=15em src="https://cdn.pixabay.com/photo/2015/03/26/22/09/city-skyline-693502_960_720.jpg"
+					<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2015/03/26/22/09/city-skyline-693502_960_720.jpg"
 					 alt="First slide">
 					<div class="carousel-caption d-none d-md-block">
 						<header>
@@ -87,7 +87,7 @@
 				</div>
 				
 				<div class="item">
-					<img class="d-block w-100" width=100% height=20px src="https://c1.staticflickr.com/6/5457/17207270208_f33087e32d_b.jpg"
+					<img class="d-block w-100" src="https://upload.wikimedia.org/wikipedia/commons/3/3a/Longtail_Boat_At_Maya_Bay%2C_Krabi%2C_Thailand.jpg"
 					 alt="Second slide">
 					<div class="carousel-caption d-none d-md-block">
 						<header>
@@ -101,7 +101,7 @@
 					</div>
 				</div>
 				<div class="item">
-					<img class="d-block w-100" width=100% height=15em src="https://cdn.pixabay.com/photo/2016/09/20/20/56/cliffs-of-moher-1683423_960_720.jpg"
+					<img class="d-block w-100" src="https://c1.staticflickr.com/2/1928/30648018247_3aa69f40b2_b.jpg"
 					 alt="Third slide">
 					<div class="carousel-caption d-none d-md-block">
 						<header>
@@ -115,7 +115,7 @@
 					</div>
 				</div>
 				<div class="item">
-						<img class="d-block w-100" width=100% height=5em src="https://c1.staticflickr.com/2/1928/30648018247_3aa69f40b2_b.jpg"
+						<img class="d-block w-100" src="https://cdn.pixabay.com/photo/2016/09/20/20/56/cliffs-of-moher-1683423_960_720.jpg"
 						 alt="Third slide">
 						<div class="carousel-caption d-none d-md-block">
 							<header>
@@ -204,7 +204,7 @@
 					<h2>About Me</h2>
 				</header>
 
-				<a href="#" class="image featured"><img src="./images/morocco.jpg" alt="" /></a>
+				<a href="#" class="image featured"><img src="./images/IMG_2570.jpg" height="20%" width="20%" alt="" /></a>
 
 				<p>I am a bilingual educator turned software developer! My greatest strengths are my organization skills and
 					interpersonal communication. My peers have commended me for being able to express complex ideas in a way that's
